# mandexing

./: .gitignore  CSV.cpp  CSV.h  Crystal.cpp  Crystal.h  Detector.cpp  Detector.h  Dialogue.cpp  Dialogue.h  FileReader.cpp  FileReader.h  Makefile  Node.cpp  Node.h  PNGFile.cpp  PNGFile.h  PredictionView.cpp  PredictionView.h  README.md  RefinementGridSearch.cpp  RefinementGridSearch.h  RefinementNelderMead.cpp  RefinementNelderMead.h  RefinementStepSearch.cpp  RefinementStepSearch.h  RefinementStrategy.cpp  RefinementStrategy.h  TextManager.cpp  TextManager.h  Tinker.cpp  Tinker.h  defaults.h  deploy  font.h  main.cpp  mat3x3.cpp  mat3x3.h  meson.build  moc_Dialogue.cpp  moc_PredictionView.cpp  (+6 more)
WindexingV0.0.2.app/Contents/: Info.plist
WindexingV0.0.2.app/Contents/MacOS/: Windexing.app
WindexingV0.0.2.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
WindexingV0.0.app/Contents/Frameworks/QtSvg.framework/Versions/5/: QtSvg
WindexingV0.0.app/Contents/MacOS/: Windexing.app
Windexingv0.0.3.app/Contents/MacOS/: Windexing.app
